Tried to fix Copy on Firefox again :(.. not working...

--- a/WebService/src/main/app/src/sites/dashboard/dashboard.css
+++ b/WebService/src/main/app/src/sites/dashboard/dashboard.css
@@ -114,9 +114,6 @@ body {
     top: 15px;
 }
 
-.groupfab:hover .addIcon {
-
-}
 
 .groupfab .text {
     opacity:0;
@@ -125,7 +122,7 @@ body {
     position: absolute;
     white-space: nowrap;
     left: 45px;
-    top: 12px
+    top: 12px;
 }
 .groupfab:hover .text {
     opacity:1;
@@ -141,6 +138,38 @@ body {
     border-color: #9c000a !important;
     box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease-in-out;
+}
+.groupfabEng:hover {
+    width: 180px !important;
+}
+
+.groupfab .textEng {
+    opacity:0;
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+    position: absolute;
+    white-space: nowrap;
+    left: 45px;
+    top: 12px
+}
+.groupfab:hover .textEng {
+    opacity:1;
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+}
+
+@media (max-width: 425px) {
+    .groupfab {
+        right: 15px;
+        bottom: 75px;
+    }
+}
+
+@media (min-width: 426px) {
+    .groupfab {
+        right: 30px;
+        bottom: 70px;
+    }
 }
 
 
@@ -167,10 +196,6 @@ body {
     top: 15px;
 }
 
-.fab:hover .addIcon {
-
-}
-
 .fab .text {
     opacity:0;
     transition-delay: 0s;
@@ -186,6 +211,21 @@ body {
     -webkit-transform: translateX(0px);
 }
 
+.fab .textEng {
+    opacity:0;
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+    position: absolute;
+    white-space: nowrap;
+    left: 45px;
+    top: 12px
+}
+.fab:hover .textEng {
+    opacity:1;
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+}
+
 
 .fab:hover {
     width: 215px;
@@ -194,6 +234,9 @@ body {
     border-color: #9c000a !important;
     box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease-in-out;
+}
+.fabEng:hover {
+    width: 180px !important;
 }
 
 @media (max-width: 425px) {
@@ -232,7 +275,7 @@ body {
     top: 15px;
 }
 
-.fabEng .text {
+.fabEng .textEng {
     opacity:0;
     transition-delay: 0s;
     transition-duration: 0.4s;
@@ -241,7 +284,7 @@ body {
     left: 45px;
     top: 12px
 }
-.fabEng:hover .text {
+.fabEng:hover .textEng {
     opacity:1;
     transform: translateX(0px);
     -webkit-transform: translateX(0px);
